...
            android:maxLength="36"
            android:singleLine="true"
            android:text="@{viewModel.inputName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
          android:id="@+id/profile_rename_save_button"
          style="@style/StateButtonActive"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="@dimen/profile_rename_activity_profile_rename_save_button_margin_end"
          android:background="@{viewModel.inputName.length > 0 ? @drawable/state_button_primary_background : @drawable/start_button_transparent_background}"
...
