...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.RoundedShape"
        app:profileImageSource="@{viewModel.profile.avatar}" />

      <TextView
        android:id="@+id/profile_edit_name"
        style="@style/Heading2ViewStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:importantForAccessibility="no"
...
